# django-tellme

./: .coveragerc  .gitignore  LICENSE  MANIFEST.in  README.rst  SECURITY.md  package.json  requirements-tests.txt  runtests.py  setup.cfg  setup.py  tox.ini  webpack.config.js
.github/workflows/: build.yml  python-publish.yml  python-tox.yml  sdist.yml  tox.yml
tellme/: admin.py  forms.py  mail.py  models.py  tests.py  urls.py  views.py
tellme/locale/en/LC_MESSAGES/: django.mo  django.po  djangojs.mo  djangojs.po
tellme/locale/fr/LC_MESSAGES/: django.mo  django.po  djangojs.mo  djangojs.po
tellme/locale/ja/LC_MESSAGES/: django.mo  django.po
tellme/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
tellme/migrations/: 0001_initial.py  0002_auto_20160218_1633.py  0002_auto_20160411_2232.py  0003_feedback_email.py  0004_auto.py  0004_auto_20180509_0427.py  0004_auto_20180608_0808.py  0004_auto_20180726_1530.py
tellme/static/tellme/: feedback.css  feedback.js  feedback.min.css  feedback.min.js  html2canvas.min.js
tellme/static/tellme/feedback/: script.js  style.js
tellme/templates/tellme/: css_inc.html  initButtonText.txt  js_inc.html  tpl-button.html  tpl-description.html  tpl-highlighter.html  tpl-overview.html  tpl-submit-error.html  tpl-submit-success.html
tellme/tests/: factories.py  test_admin.py  test_assets.py  test_models.py  test_views.py
tellme/tests/testproject/: .urls.py.swp  settings.py  urls.py  wsgi.py
