[metadata]
name = django-tellme
version = 0.7.3
url = https://github.com/ludrao/django-tellme
author = Ludrao
author_email = ludrao@ludrao.net
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.5
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
description = A simple Django app that enables user feedback.
long_description = file: README.rst

[options]
python_requires = >=2.7
install_requires =
    Pillow>=8.4.0 
